Lots of un commited changes

--- a/config.org
+++ b/config.org
@@ -9,6 +9,11 @@
 - [[#package-management][Package Management]]
   - [[#setup-packageel-to-work-with-melpa][Setup package.el to work with MELPA.]]
   - [[#installing-use-package][Installing use-package]]
+  - [[#set-up-local-repo][Set up local repo]]
+- [[#backend][Backend]]
+  - [[#garbage-collection][Garbage Collection]]
+  - [[#native-compil][Native Compil]]
+  - [[#delete-selection-mode][Delete Selection Mode]]
 - [[#keybindings][Keybindings]]
   - [[#custom-keybinds][Custom keybinds]]
   - [[#evil-mode][Evil Mode]]
@@ -25,9 +30,11 @@
   - [[#org-link-abbreviations][Org Link abbreviations]]
   - [[#enable-org-block-expansion][Enable Org Block expansion]]
   - [[#auto-create-toc][Auto-create TOC]]
+  - [[#org-present][Org present]]
 - [[#latexpdf-tools][LaTeX/PDF tools]]
 - [[#emms---emacs-multimedia-system][EMMS - Emacs MultiMedia System]]
 - [[#magit][Magit]]
+- [[#custom-functions][Custom Functions]]
 - [[#hooks---this-section-must-always-be-last][Hooks - This section must always be last]]
 
 * Important Variables
@@ -67,6 +74,57 @@ Set to any value other than 1 to disable
   (unless (package-installed-p 'use-package)
     (package-install 'use-package))
   (setq use-package-always-ensure t)
+#+end_src
+
+** Set up local repo
+#+begin_src emacs-lisp
+(add-to-list 'load-path "~/.emacs.d/site-lisp/elpa-mirror")
+(require 'elpa-mirror)
+
+;; myelpa is the ONLY repository now, dont forget trailing slash in the directory
+(setq package-archives '(("myelpa" . "~/.emacs.d/myelpa/")))
+
+#+end_src
+
+* Backend
+** Garbage Collection
+#+begin_src emacs-lisp
+;; Using garbage magic hack.
+ (use-package gcmh
+   :config
+   (gcmh-mode 1))
+;; Setting garbage collection threshold
+(setq gc-cons-threshold 402653184
+      gc-cons-percentage 0.6)
+
+;; Profile emacs startup
+(add-hook 'emacs-startup-hook
+          (lambda ()
+            (message "*** Emacs loaded in %s with %d garbage collections."
+                     (format "%.2f seconds"
+                             (float-time
+                              (time-subtract after-init-time before-init-time)))
+                     gcs-done)))
+
+;; Silence compiler warnings as they can be pretty disruptive (setq comp-async-report-warnings-errors nil)
+#+end_src
+
+
+** Native Compil
+#+begin_src emacs-lisp
+;; Silence compiler warnings as they can be pretty disruptive
+(if (boundp 'comp-deferred-compilation)
+    (setq comp-deferred-compilation nil)
+    (setq native-comp-deferred-compilation nil))
+;; In noninteractive sessions, prioritize non-byte-compiled source files to
+;; prevent the use of stale byte-code. Otherwise, it saves us a little IO time
+;; to skip the mtime checks on every *.elc file.
+(setq load-prefer-newer noninteractive)
+#+end_src
+
+** Delete Selection Mode
+#+begin_src emacs-lisp
+(delete-selection-mode t)
 #+end_src
 
 * Keybindings
@@ -112,9 +170,10 @@ Set to any value other than 1 to disable
 "r p" 'pkg-update
 "r c" '((lambda () (interactive) (load-file "~/.emacs.d/init.el")) :which-key "Reload emacs config")
 "e c" 'run-compiler-on-line
+"e l" 'other-buff-to-split
+"e o" 'org-latex-export-to-pdf
 "f q" 'delete-frame
 "f n" 'make-frame
-"e l" 'other-buff-to-split
 "m s" 'emms-start
 "m e" 'emms-stop
 "m n" 'emms-next
@@ -301,6 +360,12 @@ Set to any value other than 1 to disable
   :init (add-hook 'org-mode-hook 'toc-org-enable))
    #+end_src
 
+
+** Org present
+#+begin_src emacs-lisp
+(use-package org-present)
+#+end_src
+
 * LaTeX/PDF tools
 
 #+begin_src emacs-lisp
@@ -345,7 +410,26 @@ Set to any value other than 1 to disable
 (use-package magit)
 #+end_src
 
+
+* Custom Functions
+#+begin_src emacs-lisp
+#+end_src
+
 * Hooks - This section must always be last
 #+begin_src emacs-lisp
 ;; (add-hook 'server-after-make-frame-hook #'local/select-start-file)
+(eval-after-load "org-present"
+  '(progn
+     (add-hook 'org-present-mode-hook
+               (lambda ()
+                 (org-present-big)
+                 (org-display-inline-images)
+                 (org-present-hide-cursor)
+                 (org-present-read-only)))
+     (add-hook 'org-present-mode-quit-hook
+               (lambda ()
+                 (org-present-small)
+                 (org-remove-inline-images)
+                 (org-present-show-cursor)
+                 (org-present-read-write)))))
 #+end_src
