not sure what i did

--- a/config.org
+++ b/config.org
@@ -363,7 +363,23 @@ Set to any value other than 1 to disable
 
 ** Org present
 #+begin_src emacs-lisp
-(use-package org-present)
+(add-to-list 'load-path "~/.emacs.d/site-lisp/org-present")
+(autoload 'org-present "org-present" nil t)
+
+(eval-after-load "org-present"
+  '(progn
+     (add-hook 'org-present-mode-hook
+               (lambda ()
+                 (org-present-big)
+                 (org-display-inline-images)
+                 (org-present-hide-cursor)
+                 (org-present-read-only)))
+     (add-hook 'org-present-mode-quit-hook
+               (lambda ()
+                 (org-present-small)
+                 (org-remove-inline-images)
+                 (org-present-show-cursor)
+                 (org-present-read-write)))))
 #+end_src
 
 * LaTeX/PDF tools
@@ -418,18 +434,4 @@ Set to any value other than 1 to disable
 * Hooks - This section must always be last
 #+begin_src emacs-lisp
 ;; (add-hook 'server-after-make-frame-hook #'local/select-start-file)
-(eval-after-load "org-present"
-  '(progn
-     (add-hook 'org-present-mode-hook
-               (lambda ()
-                 (org-present-big)
-                 (org-display-inline-images)
-                 (org-present-hide-cursor)
-                 (org-present-read-only)))
-     (add-hook 'org-present-mode-quit-hook
-               (lambda ()
-                 (org-present-small)
-                 (org-remove-inline-images)
-                 (org-present-show-cursor)
-                 (org-present-read-write)))))
 #+end_src
