--- a/config.org
+++ b/config.org
@@ -7,6 +7,7 @@
   - [[#disable-annoying-backup-files][Disable annoying backup files]]
   - [[#disable-fucking-bell-sound][Disable fucking bell sound]]
   - [[#config-files-eshell][Config files eshell]]
+  - [[#native-compile-packages][Native compile packages]]
 - [[#package-management][Package Management]]
   - [[#setup-packageel-to-work-with-melpa][Setup package.el to work with MELPA.]]
   - [[#installing-use-package][Installing use-package]]
@@ -66,6 +67,11 @@ Set to any value other than 1 to disable
 eshell-rc-script "~/.emacs.d/eshell.rc"
 ;;(eshell-login-script "~/.emacs.d/eshell.login")
 )
+#+end_src
+
+** Native compile packages
+#+begin_src emacs-lisp
+(setq package-native-compile t)
 #+end_src
 
 * Package Management
@@ -436,6 +442,16 @@ With a prefix ARG always prompt for command to use."
   (emacs-lisp-mode)
   (electric-pair-local-mode)
 )
+
+(defun kcr/wrap-eqn ()
+"Wrap equation in org-mode markers"
+  (interactive)
+  (let ((point1 (region-beginning))
+	(point2 (+ 2 (region-end))))
+    (goto-char point1)
+    (insert "\\" "\(")
+    (goto-char point2)
+    (insert "\\" "\)")))
 #+end_src
 
 ** Macros
@@ -453,21 +469,21 @@ With a prefix ARG always prompt for command to use."
  :config
  (general-evil-setup t))
 (global-unset-key (kbd "C-i"))
-(global-set-key (kbd "C-=") 'text-scale-increase)
-(global-set-key (kbd "C--") 'text-scale-decrease)
-(global-set-key (kbd "C-x b") 'counsel-ibuffer)
-(global-set-key (kbd "C-x a q") 'evil-delete-buffer)
-(global-set-key (kbd "C-c l") 'org-store-link)
-(global-set-key (kbd "C-c C-l") 'org-insert-link)
-(global-set-key (kbd "C-x a a") 'append-to-buffer)
+(global-set-key (kbd "C-=") #'text-scale-increase)
+(global-set-key (kbd "C--") #'text-scale-decrease)
+(global-set-key (kbd "C-x b") #'counsel-ibuffer)
+(global-set-key (kbd "C-x a q") #'evil-delete-buffer)
+(global-set-key (kbd "C-c l") #'org-store-link)
+(global-set-key (kbd "C-c C-l") #'org-insert-link)
+(global-set-key (kbd "C-x a a") #'append-to-buffer)
 (global-set-key (kbd "C-c o") #'kcr/open-with)
-(global-set-key (kbd "C-c C-i") 'kcr/insert-link-to-file)
+(global-set-key (kbd "C-c C-i") #'kcr/insert-link-to-file)
 
 (nvmap :prefix "SPC"
-"r p" 'kcr/pkg-update
-"r c" '((lambda () (interactive) (load-file "~/.emacs.d/init.el")) :which-key "Reload emacs config")
-"e c" 'kcr/run-compiler-on-line
-"e l" 'kcr/other-buff-to-split
+"r p" #'kcr/pkg-update
+"r c" #'((lambda () (interactive) (load-file "~/.emacs.d/init.el")) :which-key "Reload emacs config")
+"e c" #'kcr/run-compiler-on-line
+"e l" #'kcr/other-buff-to-split
 "e o" 'org-latex-export-to-pdf
 "e p" 'print-buffer
 "f q" 'delete-frame
