--- a/eshell/history
+++ b/eshell/history
@@ -23,3 +23,20 @@ print
 print --help
 htop
 killall emacs
+ls
+compiler test.tex 
+compiler test.tex 
+compiler test.tex 
+biber test
+bibtex test
+pacman -Ss biber
+sudo pacman -S biber
+biber test
+ls
+compiler test.tex 
+biber test
+ls test*
+rm test.*
+ls
+ls test*
+exit
